--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   http: ^1.1.0
   google_maps_flutter: ^2.1.1
   firebase_auth: ^4.5.0
+  firebase_core: ^2.22.0
   cupertino_icons: ^1.0.2
   socket_io_client: ^2.0.3+1
 
