--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,20 @@ dependencies:
     sdk: flutter
   get: ^4.6.1
   http: ^1.1.0
-  google_maps_flutter: ^2.1.1
   firebase_auth: ^4.5.0
   firebase_core: ^2.22.0
   cupertino_icons: ^1.0.2
   socket_io_client: ^2.0.3+1
+
+  #map
+  google_maps_flutter: ^2.1.1
+  geolocator: ^8.0.3
+  flutter_polyline_points: ^2.0.0
+
+  #network connectivity
+  connectivity_plus: ^2.2.0
+
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -26,5 +35,12 @@ dev_dependencies:
   flutter_lints: ^3.0.1
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - assets/
+    -
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+
