--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-API_URL = http://dev.practicle.sg:6666
-SOCKET_URL = ws://dev.practicle.sg:6666
-
-AUTH_ENDPOINT = /api/auth
-RIDE_ENDPOINT = /api/ride
+API_KEY = AIzaSyCkWlGDvftO896OXUQN_g485-a39PET8e8
+API_URL = http://10.0.2.2:6666
+SOCKET_URL = ws://10.0.2.2:6666
