--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    -
+    - .env
+
 flutter_icons:
   android: true
   ios: true
