--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,10 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_core: ^2.22.0
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.2.0
   socket_io_client: ^2.0.3+1
+  shared_preferences: ^2.0.12
+
 
   #map
   google_maps_flutter: ^2.1.1
@@ -25,6 +28,9 @@ dependencies:
 
   #network connectivity
   connectivity_plus: ^2.2.0
+
+  # for calling
+  flutter_phone_direct_caller: ^2.1.0
 
   flutter_dotenv: ^5.1.0
 
