--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   socket_io_client: ^2.0.3+1
   shared_preferences: ^2.0.12
+  intl: ^0.17.0
 
 
   #map
