--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_KEY = AIzaSyCkWlGDvftO896OXUQN_g485-a39PET8e8
-API_URL = http://10.0.2.2:6666
-SOCKET_URL = ws://10.0.2.2:6666
+API_KEY=AIzaSyCkWlGDvftO896OXUQN_g485-a39PET8e
+API_URL=http://10.0.2.2:6666
+SOCKET_URL=ws://10.0.2.2:6666
